Correcting mapper and simplifying unit tests